<resources>
    <string name="app_name">Assignment 3</string>
    <string name="task1">Task1</string>
    <string name="task2">Task2</string>
    <string name="about_us">About Us</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="name">Manali Rajendra Tawar</string>
    <string name="sub_text">Android Programming is fun</string>
    <string name="todo">TODO</string>
    <string name="go_back">Go Back</string>
    <string name="posterImage">PosterImage</string>
    <string name="description">Description</string>
    <string name="movie_1">Movie - 1</string>
    <string name="movie_2">Movie - 2</string>
    <string name="movie_3">Movie - 3</string>
    <string name="nothing_is_selected">Nothing is Selected !!</string>

</resources>