<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MovieListFragment"
    android:padding="10dp">
    <Button
        android:id="@+id/movie1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_1"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/movie2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_2"
        android:textSize="30sp"/>
    <Button
        android:id="@+id/movie3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movie_3"
        android:textSize="30sp"/>
</LinearLayout>